# signaldesk

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  compose.yaml
.github/workflows/: ci.yml
apps/web/: .dockerignore  Dockerfile  package-lock.json  package.json
apps/web/src/app/: globals.css  layout.tsx
apps/web/src/components/: dashboard.test.tsx  dashboard.tsx
apps/web/src/lib/: api.test.ts  api.ts  types.ts  ui.test.ts  ui.ts
docs/: architecture.md  interview-guide.md  safety.md
scripts/: e2e_smoke.py
services/api/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
services/api/data/policies/: access__ar__least-privilege.md  access__en__least-privilege.md  compliance__en__data.md  incident__en__response.md  procurement__en__vendor.md  service__ar__requests.md  service__en__requests.md
services/api/eval/: cases.jsonl
services/api/eval/results/: demo-benchmark.json  demo-evaluation.json  external-provider-smoke.json
services/api/migrations/: env.py
services/api/migrations/versions/: 3fd3579beb7a_initial_schema.py
services/api/scripts/: __init__.py  benchmark.py  evaluate.py  external_provider_smoke.py
services/api/signaldesk/: __init__.py  config.py  database.py  events.py  main.py  models.py  repository.py  retrieval.py  schemas.py  security.py  seed.py
services/api/signaldesk/ai/: __init__.py  base.py  demo.py  factory.py  openai.py
services/api/tests/: conftest.py  test_api.py  test_audit_chain.py  test_openai_provider.py  test_security.py  test_triage.py  test_websocket.py
