[project]
name = "signaldesk-api"
version = "0.1.0"
description = "Auditable AI-assisted operations triage API"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.35.0",
  "sqlalchemy>=2.0.40",
  "pydantic-settings>=2.10.0",
  "httpx>=0.28.0",
  "alembic>=1.18.5",
  "psycopg[binary]>=3.3.4",
]

[dependency-groups]
dev = [
  "pip-audit>=2.10.1",
  "pytest>=8.4.0",
  "pytest-cov>=6.2.0",
  "ruff>=0.12.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501", "B008"]
